--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,372 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
           id="viewport-meta">
     <title>Comment Exploration</title>
-    <style type="text/css">
-        body {
-            background-color: #41464d;
-            color: #fff;
-            font-family: "TabletGothic", "Helvetica Neue", Helvetica, Arial, FreeSans, sans-serif;
-            font-size: 1em;
-            line-height: 1.5;
-            margin: 0;
-            padding: 100px 0 0 0;
-        }
-
-        a {
-            color: #b91109;
-            text-decoration: none
-        }
-
-        a:hover, a:active, a:focus {
-            color: #ff8600
-        }
-
-        li {
-            list-style: none;
-        }
-
-        li::before {
-            content: '>';
-            margin-left: -1.3em;
-            margin-right: 0.3em;
-        }
-
-        main {
-            background-color: #ffffff;
-            box-shadow: 0 0 0.3125em rgba(65, 70, 77, 0.5);
-            color: #252525;
-            margin: 0 auto;
-            max-width: 62.5rem;
-            min-width: 300px;
-            padding: env(safe-area-inset-top) env(safe-area-inset-right) 0 env(safe-area-inset-left);
-        }
-
-        header {
-            padding: .625rem 1.25rem 0;
-        }
-
-        header a {
-            color: #252525;
-        }
-
-        #header-nav {
-            text-align: right;
-            color: #000;
-            text-transform: uppercase;
-            display: flex;
-            flex-flow: row wrap;
-        }
-
-        nav {
-            display: block;
-        }
-
-        nav.nav-left {
-            margin-right: auto;
-        }
-
-        nav.nav-main {
-            border-bottom: 1px solid #cccccf;
-            font-size: .875rem;
-            line-height: 2.25rem;
-            letter-spacing: 0.05em;
-        }
-
-        nav.nav-main a {
-            font-size: .875rem;
-            line-height: 2.25rem;
-            padding-right: .6875rem;
-        }
-
-        #header-nav a {
-            line-height: 2rem;
-            font-size: 0.625rem;
-            letter-spacing: 1px;
-            margin-right: 0.75rem;
-        }
-
-        .logo {
-            text-shadow: 1px 1px 0 #8D8D8D, 2px 2px 0 #8D8D8D, 3px 3px 0 #8D8D8D, 4px 4px 0 #8D8D8D, 5px 5px 0 #8D8D8D, 6px 6px 0 #8D8D8D; /* , 7px 7px 0 #8D8D8D, 8px 8px 0 #8D8D8D, 9px 9px 0 #8D8D8D, 10px 10px 5px rgba(0, 0, 0, 0.8);*/
-            font-size: 3rem;
-            font-weight: bold;
-            color: white;
-            text-decoration: underline;
-            padding: 0;
-            margin: 0;
-            height: 5.375rem;
-        }
-
-        section {
-            position: relative;
-        }
-
-        section.fat-border {
-            margin-top: 2.5rem;
-            margin-left: 1.25rem;
-            margin-right: 1.25rem;
-            padding-left: 1.25rem;
-            padding-right: 1.25rem;
-            color: #252525;
-            position: relative;
-            display: block;
-        }
-
-        section.fat-border > div {
-            padding-left: 1.25rem;
-            padding-right: 1.25rem;
-            border: 6px solid #eeeef0;
-            margin: 1.5rem auto 1.25rem;
-        }
-
-        section.fat-border > div > h1 {
-            top: -1rem;
-            margin: 0 auto;
-            position: relative;
-            padding: 0;
-            text-align: center;
-            font-size: 1em;
-        }
-
-        section.fat-border > div > h1 > span {
-            background-color: white;
-            display: inline-block;
-            padding: 0 .75rem;
-            font-size: 0.875rem;
-            letter-spacing: 0.125em;
-            font-weight: normal;
-            max-width: 90%;
-            text-transform: uppercase;
-            text-align: center;
-        }
-
-        section > div > h2 {
-            font-size: 1.375rem;
-            margin: 0 0 0.4em 0;
-            letter-spacing: .03em;
-            line-height: 1.3;
-            font-weight: 700;
-        }
-
-        section > div > p {
-            font-size: 1rem;
-            margin: 0;
-            letter-spacing: .03em;
-            padding-bottom: 1.1rem;
-        }
-
-        section.dark, section.light {
-            margin-top: 2.5rem;
-            color: #252525;
-            position: relative;
-            display: block;
-        }
-
-        section.dark > div, section.light > div {
-            margin-left: 2.5rem;
-            margin-right: 2.5rem;
-            margin-top: 1.25rem;
-            padding-top: 1.25rem;
-            padding-left: 1.25rem;
-            padding-right: 1.25rem;
-            max-width: 55rem;
-        }
-        section.dark > h1 > a, section.light > h1  > a {
-            color: inherit;
-            font-weight: bold;
-            position: absolute;
-            right: 1em;
-        }
-        section.dark > h1 > a > svg,
-        section.light > h1 > a > svg {
-            transform: rotate(-90deg);
-            fill:currentColor;
-        }
-        section.dark > h1, section.light > h1 {
-            padding: .9375rem 1.25rem;
-            line-height: 1.875rem;
-            letter-spacing: .03em;
-
-            font-size: 1.375rem;
-            background-color: #33333c;
-            color: #fff;
-            display: flex;
-            text-rendering: optimizeLegibility;
-        }
-
-        section.light > h1 {
-            background-color: #eeeef0;
-            color: #252525;
-        }
-
-        #sect-publications li {
-            margin-bottom: 0.375em;
-        }
-
-        #sect-publications a {
-            font-size: 0.8em;
-        }
-
-        #sect-examples div {
-            display: flex;
-
-            justify-content: center;
-            margin: 0;
-            padding: 0;
-            max-width: none;
-        }
-
-        #sect-examples figure {
-            margin: 0 0 0 1.5rem;
-            padding: 0;
-            text-align: center;
-            position: relative;
-        }
-
-        #sect-examples figure:last-child {
-            padding-right: 1.5rem;
-        }
-
-        #sect-examples figure > img {
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            position: relative;
-            transition: all 0.3s cubic-bezier(.17, .67, .63, .99);
-        }
-
-        #sect-examples figure:hover > img {
-            transform: scale(1.2);
-            filter: brightness(35%);
-        }
-
-        #sect-examples figure:hover a,
-        #sect-examples figure:hover figcaption {
-            opacity: 1;
-        }
-
-        #sect-examples figure figcaption {
-            position: absolute;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            left: 50%;
-            transform: translate(-50%, 0);
-            color: #eeeef0;
-            font-size: 1.1em;
-            letter-spacing: 0.1em;
-            width: 100%;
-            opacity: 0;
-        }
-
-        #sect-examples figure a {
-            position: absolute;
-            bottom: 0.5em;
-            left: 50%;
-            transform: translate(-50%, 0);
-            text-transform: uppercase;
-            color: #fff;
-            font-weight: bold;
-            border: 1px solid #fff;
-            transition: all 0.4s ease;
-            margin: 0;
-            padding: 0.3em 0.5em;
-            opacity: 0;
-        }
-
-        #sect-examples figure a:hover {
-            box-shadow: 0 0 5px #fff;
-        }
-
-        .explore-button {
-            display: inline-block;
-            background-color: #b91109;
-            border-radius: 5px;
-            color: #fff;
-            font-size: .8125rem;
-            font-weight: bold;
-            letter-spacing: .08em;
-            line-height: 1.125rem;
-            margin: 0;
-            padding: .625rem 1rem;
-            text-align: center;
-            text-transform: uppercase;
-            transition: all 0.15s ease-in-out;
-            text-rendering: optimizeLegibility;
-            position: absolute;
-            right: 3em;
-            bottom: 1.3rem;
-        }
-
-        .explore-button:hover {
-            background-color: #880d07;
-            color: #fff;
-            cursor: pointer;
-        }
-
-        footer {
-            font-size: .875rem;
-            margin-top: 2.75rem;
-            text-align: center;
-        }
-
-        footer > div.foot-sep {
-            background-color: #33333c;
-            background-image: linear-gradient(to right, #4A4A4A 0%, #2C2A2B 30%, #494A4E 60%, #3B3B3D 80%, #4A4A4A 100%);
-            padding: 3.5rem 0;
-            display: block;
-            margin: 1.25rem 0 3.75rem 0;
-            /*border-bottom: 1px solid #cccccf;
-            margin: .625rem 1.25rem 3.75rem 1.25rem;*/
-        }
-
-        footer > div.linkdump {
-            background-color: #eeeef0;
-            padding-bottom: 1.25rem;
-            padding-top: 1.25rem;
-            font-weight: bold;
-        }
-
-        footer > div.linkdump a {
-            color: #252525;
-            margin: 0 .4em;
-            font-size: 0.875rem;
-        }
-
-        footer > div.linkdump a:hover,
-        footer > div.linkdump a:active,
-        footer > div.linkdump a:focus {
-            color: #000;
-        }
-
-        footer > div.foot {
-            background-color: #252525;
-            padding-bottom: 1.25rem;
-            padding-top: 1.25rem;
-            border: none;
-            color: #cccccf;
-        }
-
-        footer > div.foot > div {
-            text-align: center;
-            padding-bottom: 3.5rem;
-            padding-top: 0.75rem;
-        }
-
-        footer > div.foot a {
-            color: #eeeef0;
-        }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <main>
     <header>
         <div id="header-nav">
             <nav class="nav-left">
-                <a href="https://hpi.de/naumann/projects/web-science.html">Research</a>
-                <a href="">GitHub</a>
+                <a href="">
+                    <svg style="height:1rem; margin-bottom: -.2rem" viewBox="0 0 256 250" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
+                        <g>
+                            <path d="M128.00106,0 C57.3172926,0 0,57.3066942 0,128.00106 C0,184.555281 36.6761997,232.535542 87.534937,249.460899 C93.9320223,250.645779 96.280588,246.684165 96.280588,243.303333 C96.280588,240.251045 96.1618878,230.167899 96.106777,219.472176 C60.4967585,227.215235 52.9826207,204.369712 52.9826207,204.369712 C47.1599584,189.574598 38.770408,185.640538 38.770408,185.640538 C27.1568785,177.696113 39.6458206,177.859325 39.6458206,177.859325 C52.4993419,178.762293 59.267365,191.04987 59.267365,191.04987 C70.6837675,210.618423 89.2115753,204.961093 96.5158685,201.690482 C97.6647155,193.417512 100.981959,187.77078 104.642583,184.574357 C76.211799,181.33766 46.324819,170.362144 46.324819,121.315702 C46.324819,107.340889 51.3250588,95.9223682 59.5132437,86.9583937 C58.1842268,83.7344152 53.8029229,70.715562 60.7532354,53.0843636 C60.7532354,53.0843636 71.5019501,49.6441813 95.9626412,66.2049595 C106.172967,63.368876 117.123047,61.9465949 128.00106,61.8978432 C138.879073,61.9465949 149.837632,63.368876 160.067033,66.2049595 C184.49805,49.6441813 195.231926,53.0843636 195.231926,53.0843636 C202.199197,70.715562 197.815773,83.7344152 196.486756,86.9583937 C204.694018,95.9223682 209.660343,107.340889 209.660343,121.315702 C209.660343,170.478725 179.716133,181.303747 151.213281,184.472614 C155.80443,188.444828 159.895342,196.234518 159.895342,208.176593 C159.895342,225.303317 159.746968,239.087361 159.746968,243.303333 C159.746968,246.709601 162.05102,250.70089 168.53925,249.443941 C219.370432,232.499507 256,184.536204 256,128.00106 C256,57.3066942 198.691187,0 128.00106,0 Z M47.9405593,182.340212 C47.6586465,182.976105 46.6581745,183.166873 45.7467277,182.730227 C44.8183235,182.312656 44.2968914,181.445722 44.5978808,180.80771 C44.8734344,180.152739 45.876026,179.97045 46.8023103,180.409216 C47.7328342,180.826786 48.2627451,181.702199 47.9405593,182.340212 Z M54.2367892,187.958254 C53.6263318,188.524199 52.4329723,188.261363 51.6232682,187.366874 C50.7860088,186.474504 50.6291553,185.281144 51.2480912,184.70672 C51.8776254,184.140775 53.0349512,184.405731 53.8743302,185.298101 C54.7115892,186.201069 54.8748019,187.38595 54.2367892,187.958254 Z M58.5562413,195.146347 C57.7719732,195.691096 56.4895886,195.180261 55.6968417,194.042013 C54.9125733,192.903764 54.9125733,191.538713 55.713799,190.991845 C56.5086651,190.444977 57.7719732,190.936735 58.5753181,192.066505 C59.3574669,193.22383 59.3574669,194.58888 58.5562413,195.146347 Z M65.8613592,203.471174 C65.1597571,204.244846 63.6654083,204.03712 62.5716717,202.981538 C61.4524999,201.94927 61.1409122,200.484596 61.8446341,199.710926 C62.5547146,198.935137 64.0575422,199.15346 65.1597571,200.200564 C66.2704506,201.230712 66.6095936,202.705984 65.8613592,203.471174 Z M75.3025151,206.281542 C74.9930474,207.284134 73.553809,207.739857 72.1039724,207.313809 C70.6562556,206.875043 69.7087748,205.700761 70.0012857,204.687571 C70.302275,203.678621 71.7478721,203.20382 73.2083069,203.659543 C74.6539041,204.09619 75.6035048,205.261994 75.3025151,206.281542 Z M86.046947,207.473627 C86.0829806,208.529209 84.8535871,209.404622 83.3316829,209.4237 C81.8013,209.457614 80.563428,208.603398 80.5464708,207.564772 C80.5464708,206.498591 81.7483088,205.631657 83.2786917,205.606221 C84.8005962,205.576546 86.046947,206.424403 86.046947,207.473627 Z M96.6021471,207.069023 C96.7844366,208.099171 95.7267341,209.156872 94.215428,209.438785 C92.7295577,209.710099 91.3539086,209.074206 91.1652603,208.052538 C90.9808515,206.996955 92.0576306,205.939253 93.5413813,205.66582 C95.054807,205.402984 96.4092596,206.021919 96.6021471,207.069023 Z" fill="#333"></path> <!--#161614--></g>
+                    </svg>
+                    Code
+                </a>
             </nav>
             <nav class="nav-right">
-                <!--a href="">Contact</a-->
+                <a href="index.html" style="margin-right: 0; font-weight: bold">DE</a>
+                <a href="index_en.html">EN</a>
                 <a href="https://hpi.de/en/imprint.html">Impressum</a>
             </nav>
         </div>
@@ -398,7 +50,7 @@
                         test text<br>
                         more test text
                     </p>
-                    <a href="" class="explore-button">Explore</a>
+                    <a href="comex.html" class="explore-button">Explore</a>
                 </div>
             </div>
 
@@ -438,13 +90,13 @@
             </p>
             <h2>People</h2>
             <ul>
-                <li>Julian Risch, <i>PhD Student</i> <a
+                <li>Julian Risch, <i>PhD Student</i> <a class="small"
                         href="https://hpi.de/naumann/people/julian-risch.html">[contact]</a></li>
-                <li>Tim Repke, <i>PhD Student</i> <a href="https://hpi.de/naumann/people/tim-repke.html">[contact]</a>
+                <li>Tim Repke, <i>PhD Student</i> <a class="small" href="https://hpi.de/naumann/people/tim-repke.html">[contact]</a>
                 </li>
                 <li>Lasse Kohlmeyer, <i>Student Assistent</i></li>
                 <li>Alyona Vyshnevska, <i>Student Assistent</i></li>
-                <li>Ralf Krestel, <i>Senior Researcher</i> <a href="https://hpi.de/naumann/sites/krestel/">[contact]</a>
+                <li>Ralf Krestel, <i>Senior Researcher</i> <a class="small" href="https://hpi.de/naumann/sites/krestel/">[contact]</a>
                 </li>
             </ul>
         </div>
@@ -467,17 +119,17 @@
                 <li>
                     Julian Risch, Tim Repke, Lasse Kohlmeyer, Olena Vyshnevska and Ralf Krestel<br />
                     ConvEx: Conversation Exploration for Users of Online News Platforms. 2020 <i>(unpublished)</i><br />
-                    <a href="resources/whitepaper.pdf">[PDF]</a>
+                    <a class="small" href="resources/whitepaper.pdf">[PDF]</a>
                 </li>
                 <li>
                     Julian Risch, Tim Repke, Lasse Kohlmeyer and Ralf Krestel<br />
                     ComEx: Exploring User Comments on Online News Platforms. 2020 <i>CIKM (demo)</i><br />
-                    <a href="">[PDF]</a> <a href="">[Poster]</a> <a href="https://cikm2020.org/">[CIKM'20]</a>
+                    <a class="small" href="">[PDF]</a> <a class="small" href="">[Poster]</a> <a class="small" href="https://cikm2020.org/">[CIKM'20]</a>
                 </li>
                 <li>
                     Julian Risch, Tim Repke, Lasse Kohlmeyer and Ralf Krestel<br />
                     Condensing Discourse into a Graph. 2020 <i>TBD</i><br />
-                    <a href="">[PDF]</a>
+                    <a class="small" href="">[PDF]</a>
                 </li>
             </ul>
         </div>
@@ -487,8 +139,8 @@
         <div class="logo">COM.EX</div>
         <div class="linkdump">
             <a href="https://hpi.de/naumann/projects/web-science.html">Research@HPI</a> •
-            <a href="https://hpi.de/naumann/people/tim-repke.html">Julian Risch</a> •
-            <a href="https://hpi.de/naumann/people/julian-risch.html">Tim Repke</a> •
+            <a href="https://hpi.de/naumann/people/julian-risch.html">Julian Risch</a> •
+            <a href="https://hpi.de/naumann/people/tim-repke.html">Tim Repke</a> •
             <a href="https://hpi.de/en/imprint.html">Impressum</a> •
             <a href="https://hpi.de/en/data-privacy.html">Data Privacy</a>
         </div>
