fixed lots of small issues

--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -78,17 +78,20 @@
         <div class="sources">
             <h2>Unterstützte Quellen:</h2>
             <div>
-                <a href="https://sz.de/" class="logo"><img src="img/platform_logos/sz.svg" alt="Süddeutsche Zeitung" />
-                </a>
-                <a href="https://faz.de/" class="logo"><img src="img/platform_logos/faz.svg"
-                                                            alt="Frankfurter Allgemeine Zeitung" /></a>
-                <a href="https://spiegel.de" class="logo"><img src="img/platform_logos/spiegel.svg"
-                                                               alt="Spiegel Online" /></a>
-                <a href="https://www.tagesschau.de/" class="logo"><img src="img/platform_logos/tagesschau.svg"
-                                                                       alt="Tagesschau.de" /></a>
-                <a href="https://taz.de/" class="logo"><img src="img/platform_logos/taz.svg" alt="TAZ" /></a>
-                <a href="https://welt.de/" class="logo"><img src="img/platform_logos/welt.svg" alt="Welt" /></a>
-                <a href="https://zeit.de/" class="logo"><img src="img/platform_logos/zeit.svg" alt="Zeit Online" /></a>
+                <a href="https://sz.de/" target="_blank" class="logo">
+                    <img src="img/platform_logos/sz.svg" alt="Süddeutsche Zeitung" /></a>
+                <a href="https://faz.de/" target="_blank" class="logo">
+                    <img src="img/platform_logos/faz.svg" alt="Frankfurter Allgemeine Zeitung" /></a>
+                <a href="https://spiegel.de" target="_blank" class="logo">
+                    <img src="img/platform_logos/spiegel.svg" alt="Spiegel Online" /></a>
+                <a href="https://www.tagesschau.de/" target="_blank" class="logo">
+                    <img src="img/platform_logos/tagesschau.svg" alt="Tagesschau.de" /></a>
+                <a href="https://taz.de/" target="_blank" class="logo">
+                    <img src="img/platform_logos/taz.svg" alt="TAZ" /></a>
+                <a href="https://welt.de/" target="_blank" class="logo">
+                    <img src="img/platform_logos/welt.svg" alt="Welt" /></a>
+                <a href="https://zeit.de/" target="_blank" class="logo">
+                    <img src="img/platform_logos/zeit.svg" alt="Zeit Online" /></a>
             </div>
         </div>
         <label>
