--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -9,6 +9,9 @@
 <div id="sidebar">
     <div class="comex-logo">COM.EX</div>
 
+    <div class="pretty-select" id="example-selection" tabindex="1">
+    </div>
+
     <div id="sources">
         <!--div class="source">
             <h1>Quelle 1</h1>
@@ -41,7 +44,7 @@
     </div>
 </div>
 <footer>
-    <div class="left"><a href="https://github.com/TimRepke/comex-web">
+    <div class="left"><a href="https://github.com/TimRepke/comex-web" target="_blank">
         <svg style="height: 1.4em; margin-bottom: -0.2em;" viewBox="0 0 256 250" version="1.1"
              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              preserveAspectRatio="xMidYMid">
@@ -52,13 +55,13 @@
         </svg>
         GitHub
     </a> •
-        <a href="docs">API</a>
+        <a href="docs" target="_blank">API</a>
     </div>
     <div class="right">
-        <a href="index.html"><span style="font-variant: small-caps">Com.Ex</span> Projekt</a> •
-        <a href="https://hpi.de/naumann/projects/web-science.html">Forschung@HPI</a> •
-        <a href="https://hpi.de/en/data-privacy.html">Datenschutz</a> •
-        <a href="https://hpi.de/en/imprint.html">Impressum</a>
+        <a href="index.html" target="_blank"><span style="font-variant: small-caps">Com.Ex</span> Projekt</a> •
+        <a href="https://hpi.de/naumann/projects/web-science.html" target="_blank">Forschung@HPI</a> •
+        <a href="https://hpi.de/en/data-privacy.html" target="_blank">Datenschutz</a> •
+        <a href="https://hpi.de/en/imprint.html" target="_blank">Impressum</a>
     </div>
 </footer>
 <div id="main">
