full add source flow works now'

--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -65,11 +65,7 @@
     </div>
 </footer>
 <div id="main">
-    <div class="loading">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+
 
 </div>
 
@@ -98,8 +94,8 @@
             </div>
         </div>
         <label>
-            <input type="url" pattern="^https?://(zeit|sz|faz|spiegel|tagesschau|welt|taz)\.de/.*"
-                   placeholder="https://...">
+            <input type="url" pattern="^https?://(www\.)?(zeit|sz|sueddeutsche|faz|spiegel|tagesschau|welt|taz)\.(de|net)/.*"
+                   placeholder="https://..." value="https://www.welt.de/vermischtes/article204780066/Buschbraende-in-Australien-Millionen-Tiere-sterben-Pink-spendet-500-000-Dollar.html#Comments">
             <span class="error">Diese URL passt zu keiner unterstützten Quelle!</span>
         </label>
         <button class="button">Hinzufügen</button>
