beginning of renderin

--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -102,7 +102,7 @@
     </div>
 </div>
 
-
+<script type="application/javascript" src="js/libs/d3.js"></script>
 <script type="module" src="js/main.js"></script>
 </body>
 </html>
