--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ComEx: Kommentarexplorer</title>
     <link rel="stylesheet" href="css/comex.css" />
+    <link rel="stylesheet" href="css/dat.gui.css" />
 </head>
 <body>
 <div id="sidebar">
