--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -128,7 +128,7 @@
             <ul>
                 <li id="comments-filters-counter"></li>
                 <li id="comments-filters-search">
-                    <input type="text" name="comments-search" placeholder="Search.." />
+                    <input type="text" name="comments-search" placeholder="Search…" />
                     <button>
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                              viewBox="7 7 10 10">
