add container for timeslider

--- a/frontend/comex.html
+++ b/frontend/comex.html
@@ -122,6 +122,8 @@
                 </svg>
             </label>
         </div>
+        <div id="comment-graph"></div>
+        <div id="time-selector"></div>
     </div>
     <aside id="comments">
         <div id="comments-filters">
